--- a/index.html
+++ b/index.html
@@ -5,34 +5,36 @@
   	<title>Prettify</title>
   	<link rel="shortcut icon" href="favicon.ico">
     <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Oswald'>
-    <link rel="stylesheet" type="text/css" href="css/grid-system.css">
+    <link rel="stylesheet" type="text/css" href="css/grid.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     
   </head>
   <body>
-  	<header>
-  		<nav>
-	  		<a href="#">ABOUT </a>
-	  		<a href="#">FAVOURITES</a>
-	  		<a href="#">CONTACT</a>
-  		</nav>
-  		<div class="container_12">
-  			<img id="logo" src="images/logo.png">
-	  		<h1>Your name here</h1>
-	  		<h2>Your taglin here</h2>
-  		</div>
-  	</header>
-  	<section>
-  		<div class="container_12">
-  			<div class="grid_2">
-  				<img src="images/profile.jpg">	
-  			</div>
-  			<div class="grid_10">
-  				<h3>About Me</h3>
-  				<p>Lorem</p>
-  			</div> 
-  		</div>
-  	</section>
+    <header>
+      <div class="ug-wrapper">
+        <nav class="ug-row">
+          <div class="ug-col-4 ug-offset-4">
+            <div class="ug-row">
+              <div class="ug-col-4">
+                <a href="#">ABOUT</a>
+              </div>
+              <div class="ug-col-4">
+                <a href="#">FAVOURITES</a>
+              </div>
+              <div class="ug-col-4">
+                <a href="#">CONTACT</a>
+              </div> 
+            </div>
+          </div>
+        </nav>
+      </div>
+      <section class="banner">
 
+      </section> 
+
+
+    </header>
+    <section></section>
+    <footer></footer>
   </body>
 </html>
