--- a/index.html
+++ b/index.html
@@ -5,36 +5,95 @@
   	<title>Prettify</title>
   	<link rel="shortcut icon" href="favicon.ico">
     <link type='text/css' rel='stylesheet' href='http://fonts.googleapis.com/css?family=Oswald'>
-    <link rel="stylesheet" type="text/css" href="css/grid.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    
+    <link rel="stylesheet" type="text/css" href="css/simplegrid.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">    
   </head>
   <body>
     <header>
-      <div class="ug-wrapper">
-        <nav class="ug-row">
-          <div class="ug-col-4 ug-offset-4">
-            <div class="ug-row">
-              <div class="ug-col-4">
-                <a href="#">ABOUT</a>
-              </div>
-              <div class="ug-col-4">
-                <a href="#">FAVOURITES</a>
-              </div>
-              <div class="ug-col-4">
-                <a href="#">CONTACT</a>
-              </div> 
-            </div>
+      <div class="container-fluid">
+        <nav class="row">
+          <div class="col-12">
+            <a href="#">ABOUT</a>
+            <a href="#">FAVOURITES</a>
+            <a href="#">CONTACT</a>
           </div>
         </nav>
       </div>
-      <section class="banner">
-
-      </section> 
-
-
     </header>
-    <section></section>
-    <footer></footer>
+    <section class="banner">
+        <div>
+          <img id="logo" src="images/logo.png">
+          <h1 id="titulo">Your name here</h1>
+          <h3 id="subtitulo">Your tagline here</h3>  
+        </div>
+    </section>
+    <section class="fondo1">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <h3 class="articulo">About Me</h3>
+          </div>
+        <div class="row">
+          <div class="col-2">
+            <img id="profile" src="images/profile.jpg">
+          </div>
+          <div class="col-10">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia dolorem fugiat officiis omnis atque, nesciunt voluptatem repudiandae, reiciendis eum qui nam voluptas a obcaecati? Qui sequi, sunt atque beatae amet Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit illo facilis laboriosam nemo, amet veniam minus, itaque iusto eum reiciendis magni inventore nobis fugit vitae quam? Nesciunt voluptates veniam sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis enim ex, illum tempore voluptatum libero tempora saepe at, suscipit praesentium asperiores! Explicabo illum, deleniti dolor voluptatem, quisquam suscipit qui ducimus!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis minus nam quisquam. Ipsum ex facere unde exercitationem optio qui quis harum corporis provident. Iure possimus omnis quam ipsum, odio ducimus! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, deleniti similique. Ex illo temporibus necessitatibus laborum deleniti, dicta beatae, cumque. Dolorem odit praesentium labore adipisci similique neque nemo reprehenderit expedita.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo placeat incidunt sunt, distinctio expedita odio. Accusamus, molestias. Explicabo, officiis praesentium labore repellendus corporis voluptates, mollitia nulla soluta eveniet possimus, culpa..</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container-fluid">
+      <div class="fondo2">
+        <div class="row">
+          <h3 class="articulo">My Favourite Things</h3>
+        </div>
+        <div class="row">
+          <h4 class= "aside">Here are few things I really love</h4>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <span>
+              <img class="circlecat" src="images/kitten.jpg">
+            </span>
+          </div>
+          <div class="col-3">
+            <span>
+              <img  class="circlecat" src="images/kitten.jpg">
+            </span>
+          </div>
+          <div class="col-3">
+            <span>
+              <img  class="circlecat" src="images/kitten.jpg">
+            </span>
+          </div>
+          <div class="col-3">
+            <span>
+              <img  class="circlecat" src="images/kitten.jpg">
+            </span>
+          </div>
+        </div>
+      <div>
+    </section>
+    <footer>
+      <div class="container-fluid">
+        <div class="fondo-footer">
+          <div class="row">
+            <h3 class="titulo_pie">Contact Me</h3>
+          </div>
+          <div class="row">
+            <div class="col-4">
+              <img class="imagen_pie" src="images/twitter.png">
+            </div>
+            <div class="col-4">
+              <img class="imagen_pie" src="images/facebook.png">
+            </div>
+            <div class="col-4">
+              <img class="imagen_pie" src="images/linkedin.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
